--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
