--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
