--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "8",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
