--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "API_URL=http://localhost:3000 vue-cli-service serve",
     "build": "vue-cli-service build",
     "start": "node server.js"
   },
